- Bug Fix: Disconnect level on competence course deletion
- Bug Fix: Add missing competence course level erros messages

32.12.1 (27-05-2022)
- Bug Fix: RegistrationConclusionBean should always use StudentCurricularPlan and ProgramConclusion precision
- Refactor: RegistrationConclusionBean constructor cleanup

32.12.0 (20-05-2022)
- Refactor: Competence course level as entity

32.11.3 (11-05-2022)
- Refactor: New statute type finders for registration

32.11.2 (09-05-2022)
- Bug Fix: Check if ingression code already exists

32.11.1 (05-05-2022)
- Bug Fix: Proper handle of degree delete

32.11.0 (20-04-2022)
- Improvement: Copy learning languages in Degree Info
- Bug Fix: Fix NPE on method CurricularCourse.getAutonomousWorkHours(CurricularPeriod, ExecutionInterval)
- Refactor: Add code to party type
- Refactor: Organizational structure API improvements

32.10.5 (29-03-2022)
- Improvement: Summary can be created as soon as lesson starts 

32.10.4 (23-03-2022)
- Bug Fix: External curriculum groups should not be considered for conclusion purposes

32.10.3 (08-03-2022)
- Bug Fix: Add delete method for PersistentSpecialCriteriaOverExecutionCourseGroup

32.10.2 (07-03-2022)
- Refactor: Deprecate IAcademicTreasuryEvent::getExemptedAmount, which will be replaced by IAcademicTreasuryEvent::getNetExemptedAmount

32.10.1 (24-02-2022)
- Improvement: Added dates to DegreeOfficialPublication

32.10.0 (16-02-2022)
- Bug fix: Get curricular rules from curriculum module shouldn't reuse group rules result
- Improvement: Add taught languages field to competence course information 

32.9.10 (04-02-2022)
- Bug fix: Add missing AcademicPeriod.OTHER label
- Bug fix: Remove argument to check enrolments in active students group 

32.9.9 (07-12-2021)
- Improvement: Add types "EU_PERMANENT_RESIDENCE_CARD" and "EU_REGISTRATION_CERTIFICATE" to IDDocumentType

32.9.8 (19-11-2021)