@@ -1,5 +1,6 @@
 - Bug Fix: Disconnect level on competence course deletion
 - Bug Fix: Add missing competence course level erros messages
+- Bug Fix: Avoid error on students export to excel file by teacher
 
 32.12.1 (27-05-2022)
 - Bug Fix: RegistrationConclusionBean should always use StudentCurricularPlan and ProgramConclusion precision
